--- a/pytest.ini
+++ b/pytest.ini
@@ -30,6 +30,6 @@ pythonpath = src/filters_autogen
 filterwarnings =
     error
 # You can add exclusions, some examples:
-#    ignore:'zprp_ffmpeg' defines default_app_config:PendingDeprecationWarning::
+#    ignore:'zprp_ffmpeg2' defines default_app_config:PendingDeprecationWarning::
 #    ignore:The {{% if:::
 #    ignore:Coverage disabled via --no-cov switch!
