--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ tqdm = "^4.66.4"
 oslex = "^0.1.3"
 tox = "^4.15.1"
 pytest = "^8.2.2"
+ordered-set = "^4.1.0"
 
 [tool.poetry.group.view.dependencies]
 networkx = "^2.6.3"
